--- a/src/Views/AddNewUserScreen/addnewuser.fxml
+++ b/src/Views/AddNewUserScreen/addnewuser.fxml
@@ -18,23 +18,23 @@
             <Image url="@background.png" />
          </image>
       </ImageView>
-      <TextField fx:id="usernameTF" layoutX="52.0" layoutY="174.0" prefHeight="40.0" prefWidth="300.0" promptText="User Name" style="-fx-background-color: #FFFFFF; -fx-border-color: #c5d1e3; -fx-border-width: 0.5; -fx-border-radius: 5px;" />
-      <PasswordField fx:id="passwordTF" layoutX="52.0" layoutY="238.0" prefHeight="40.0" prefWidth="300.0" promptText="Password" style="-fx-background-color: #FFFFFF; -fx-border-color: #c5d1e3; -fx-border-width: 0.5; -fx-border-radius: 5px;" />
-      <PasswordField fx:id="confirmedPasswordTF" layoutX="52.0" layoutY="300.0" prefHeight="40.0" prefWidth="300.0" promptText="Password Confirm" style="-fx-background-color: #FFFFFF; -fx-border-color: #c5d1e3; -fx-border-width: 0.5; -fx-border-radius: 5px;" />
-      <TextField fx:id="emailTF" layoutX="52.0" layoutY="360.0" prefHeight="40.0" prefWidth="300.0" promptText="Email" style="-fx-background-color: #FFFFFF; -fx-border-color: #c5d1e3; -fx-border-width: 0.5; -fx-border-radius: 5px;" />
-      <ComboBox fx:id="roleSelectionCB" layoutX="52.0" layoutY="491.0" onAction="#roleSelectionCBAction" prefHeight="40.0" prefWidth="300.0" promptText="Role" style="-fx-background-color: #FFFFFF; -fx-prompt-text-fill: #FFFFFF; -fx-border-radius: 5px; -fx-border-color: #c5d1e3; -fx-border-width: 0.5px;" />
-      <DatePicker fx:id="dayOfBirthDP" layoutX="52.0" layoutY="425.0" prefHeight="40.0" prefWidth="300.0" promptText="Birthday" style="-fx-background-color: #FFFFFF; -fx-border-width: 0.5; -fx-border-color: #c5d1e3; -fx-border-radius: 5px;" />
-      <Button fx:id="saveInsertButton" layoutX="94.0" layoutY="558.0" mnemonicParsing="false" onAction="#saveInsertButtonAction" prefHeight="40.0" prefWidth="108.0" style="-fx-background-color: #4271fc;" text="Save " textFill="WHITE">
+      <TextField fx:id="usernameTf" layoutX="52.0" layoutY="174.0" prefHeight="40.0" prefWidth="300.0" promptText="User Name" style="-fx-background-color: #FFFFFF; -fx-border-color: #c5d1e3; -fx-border-width: 0.5; -fx-border-radius: 5px;" />
+      <PasswordField fx:id="passwordTf" layoutX="52.0" layoutY="238.0" prefHeight="40.0" prefWidth="300.0" promptText="Password" style="-fx-background-color: #FFFFFF; -fx-border-color: #c5d1e3; -fx-border-width: 0.5; -fx-border-radius: 5px;" />
+      <PasswordField fx:id="confirmTf" layoutX="52.0" layoutY="300.0" prefHeight="40.0" prefWidth="300.0" promptText="Password Confirm" style="-fx-background-color: #FFFFFF; -fx-border-color: #c5d1e3; -fx-border-width: 0.5; -fx-border-radius: 5px;" />
+      <TextField fx:id="emailTf" layoutX="52.0" layoutY="360.0" prefHeight="40.0" prefWidth="300.0" promptText="Email" style="-fx-background-color: #FFFFFF; -fx-border-color: #c5d1e3; -fx-border-width: 0.5; -fx-border-radius: 5px;" />
+      <ComboBox fx:id="roleCb" layoutX="52.0" layoutY="491.0" onAction="#roleCbAction" prefHeight="40.0" prefWidth="300.0" promptText="Role" style="-fx-background-color: #FFFFFF; -fx-prompt-text-fill: #FFFFFF; -fx-border-radius: 5px; -fx-border-color: #c5d1e3; -fx-border-width: 0.5px;" />
+      <DatePicker fx:id="birthDp" layoutX="52.0" layoutY="425.0" prefHeight="40.0" prefWidth="300.0" promptText="Birthday" style="-fx-background-color: #FFFFFF; -fx-border-width: 0.5; -fx-border-color: #c5d1e3; -fx-border-radius: 5px;" />
+      <Button fx:id="saveIBtn" layoutX="94.0" layoutY="558.0" mnemonicParsing="false" onAction="#addBtnAction" prefHeight="40.0" prefWidth="108.0" style="-fx-background-color: #4271fc;" text="Save " textFill="WHITE">
          <font>
             <Font name="Berlin Sans FB" size="15.0" />
          </font>
       </Button>
-      <Button fx:id="homeBackButton" layoutX="244.0" layoutY="558.0" mnemonicParsing="false" onAction="#homeBackButtonAction" prefHeight="40.0" prefWidth="108.0" style="-fx-background-color: #4271fc;" text="Home" textFill="WHITE">
+      <Button fx:id="backBtn" layoutX="244.0" layoutY="558.0" mnemonicParsing="false" onAction="#backBtnAction" prefHeight="40.0" prefWidth="108.0" style="-fx-background-color: #4271fc;" text="Back" textFill="WHITE">
          <font>
             <Font name="Berlin Sans FB" size="15.0" />
          </font>
       </Button>
-      <TextField fx:id="fullnameTF" layoutX="52.0" layoutY="105.0" prefHeight="40.0" prefWidth="300.0" promptText="Full Name" style="-fx-background-color: #FFFFFF; -fx-border-color: #c5d1e3; -fx-border-width: 0.5; -fx-border-radius: 5px;" />
-      <Label fx:id="noticeLabel" layoutX="392.0" layoutY="186.0" text="Error message" />
+      <TextField fx:id="fullnameTf" layoutX="52.0" layoutY="105.0" prefHeight="40.0" prefWidth="300.0" promptText="Full Name" style="-fx-background-color: #FFFFFF; -fx-border-color: #c5d1e3; -fx-border-width: 0.5; -fx-border-radius: 5px;" />
+      <Label fx:id="noticeLb" layoutX="392.0" layoutY="186.0" text="Error message" />
    </children>
 </AnchorPane>
