--- a/src/Views/ForgotPasswordScreen/ForgotPassword_Screen.fxml
+++ b/src/Views/ForgotPasswordScreen/ForgotPassword_Screen.fxml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Views.ForgotPasswordScreen.ForgotPasswordScreen"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="463.0" prefWidth="662.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ForgotPassword_Controller">
+   <children>
+      <Button fx:id="backButton" layoutX="61.0" layoutY="52.0" mnemonicParsing="false" onAction="#backButtonAction" text="Back" />
+      <Label layoutX="169.0" layoutY="147.0" text="Email">
+         <font>
+            <Font size="19.0" />
+         </font>
+      </Label>
+      <TextField fx:id="emailTF" layoutX="257.0" layoutY="148.0" prefHeight="25.0" prefWidth="227.0" />
+      <Button fx:id="sendpasswordButton" layoutX="260.0" layoutY="240.0" mnemonicParsing="false" onAction="#sendpasswordButtonAction" text="Send Password to Email" />
+      <Label fx:id="noticeLabel" layoutX="256.0" layoutY="194.0" prefHeight="25.0" prefWidth="227.0" text="Message sent!">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+   </children>
 </AnchorPane>
