--- a/src/Views/LoginScreen/Login_Screen.fxml
+++ b/src/Views/LoginScreen/Login_Screen.fxml
@@ -1,127 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to bottom, #ca879c, #c98294, #c77c8b, #c57782, #c37279, #c47587, #c47a94, #c17fa1, #b493c0, #a4a7d4, #99b9dc, #9cc9dc);;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.Login_Controller">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-  </rowConstraints>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.Login_Controller">
    <children>
-      <GridPane prefHeight="511.0" prefWidth="689.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 20px;">
-         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-         </rowConstraints>
-         <children>
-            <GridPane prefHeight="360.0" prefWidth="263.0">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints maxHeight="196.0" minHeight="0.0" percentHeight="100.0" prefHeight="183.5" valignment="CENTER" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <children>
-                  <Pane prefHeight="521.0" prefWidth="280.0" style="-fx-background-color: linear-gradient(to bottom, #f3dbe3, #f3d5dd, #f4ced6, #f4c8ce, #f4c2c6, #f4c2cd, #f2c3d3, #efc4da, #e4ceec, #d6d9f7, #cde3fa, #ccebf8);; -fx-background-radius: 20px 200px 200px 20px;">
-                     <GridPane.margin>
-                        <Insets />
-                     </GridPane.margin>
-                  </Pane>
-                  <Label prefHeight="36.0" prefWidth="118.0" text="Inventory" textFill="#706ac3">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                     <font>
-                        <Font name="Tahoma Bold" size="21.0" />
-                     </font>
-                     <GridPane.margin>
-                        <Insets bottom="200.0" left="50.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Label prefHeight="35.0" prefWidth="194.0" style="-fx-border-width: 0 0 2 0; -fx-border-color: white;" text="Management System" textFill="#706ac3">
-                     <font>
-                        <Font name="Tahoma Bold" size="17.0" />
-                     </font>
-                     <GridPane.margin>
-                        <Insets bottom="150.0" left="50.0" />
-                     </GridPane.margin>
-                  </Label>
-               </children>
-            </GridPane>
-            <GridPane prefHeight="411.0" prefWidth="322.0" style="-fx-background-radius: 0px 20px 20px 0px; -fx-background-color: #ffffff;" GridPane.columnIndex="1">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <children>
-                  <Label text="HELLO!" textFill="#a0dbdd" GridPane.halignment="CENTER">
-                     <font>
-                        <Font name="Tahoma Bold" size="23.0" />
-                     </font>
-                     <GridPane.margin>
-                        <Insets top="40.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Label text="Sign into your account" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-                  <TextField fx:id="usernameTextField" prefWidth="150.0" promptText="Username" style="-fx-background-color: transparent; -fx-border-color: #5FFBF1; -fx-border-width: 0px 0px 2px;" GridPane.rowIndex="2">
-                     <GridPane.margin>
-                        <Insets left="20.0" right="20.0" />
-                     </GridPane.margin>
-                  </TextField>
-                  <PasswordField fx:id="enterPasswordField" cache="true" prefWidth="185.0" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: #5FFBF1; -fx-border-width: 0px 0px 2px;" GridPane.rowIndex="3">
-                     <GridPane.margin>
-                        <Insets bottom="20.0" left="20.0" right="20.0" />
-                     </GridPane.margin>
-                  </PasswordField>
-                  <Button fx:id="loginButton" mnemonicParsing="false" onAction="#loginButtonAction" prefHeight="40.0" prefWidth="109.0" style="-fx-background-color: linear-gradient(to right top, #a0dbdd, #aadce3, #b6dce8, #c1ddea, #ccdeea); -fx-background-radius: 3em;" text="Sign in" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="4">
-                     <font>
-                        <Font name="Tahoma Bold" size="12.0" />
-                     </font>
-                  </Button>
-                  <Separator prefHeight="3.0" prefWidth="200.0" GridPane.rowIndex="5">
-                     <GridPane.margin>
-                        <Insets left="20.0" right="20.0" />
-                     </GridPane.margin>
-                  </Separator>
-                  <Hyperlink fx:id="forgotpwdLabel" onAction="#forgotpwdLabelAction" text="Forgot Password?" GridPane.halignment="CENTER" GridPane.rowIndex="6">
-                     <GridPane.margin>
-                        <Insets bottom="50.0" />
-                     </GridPane.margin>
-                  </Hyperlink>
-                  <Label fx:id="noticeLabel" text="ERROR" GridPane.rowIndex="6" />
-               </children>
-               <GridPane.margin>
-                  <Insets />
-               </GridPane.margin>
-            </GridPane>
-         </children>
-      </GridPane>
+      <ImageView fitHeight="720.0" fitWidth="1302.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@2x/background.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="closeApp" fitHeight="34.0" fitWidth="39.0" layoutX="1232.0" layoutY="14.0" onMouseClicked="#closeAppAction" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@2x/close.png" />
+         </image>
+      </ImageView>
+      <TextField fx:id="usernameTextField" layoutX="463.0" layoutY="265.0" prefHeight="49.0" prefWidth="354.0" promptText="Username" style="-fx-background-color: transparent; -fx-border-color: #9a12b3; -fx-border-width: 0px 0px 2px;">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </TextField>
+      <PasswordField fx:id="enterPasswordField" cache="true" layoutX="463.0" layoutY="349.0" prefHeight="49.0" prefWidth="354.0" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: #9a12b3; -fx-border-width: 0px 0px 2px;">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </PasswordField>
+      <Button fx:id="loginButton" layoutX="548.0" layoutY="496.0" mnemonicParsing="false" onAction="#loginButtonAction" prefHeight="49.0" prefWidth="184.0" style="-fx-background-color: #1f3a93; -fx-background-radius: 3em;" text="Đăng nhập" textFill="WHITE">
+         <font>
+            <Font name="Segoe UI Black" size="17.0" />
+         </font>
+      </Button>
+      <Hyperlink fx:id="forgotpwdLabel" layoutX="564.0" layoutY="427.0" onAction="#forgotpwdLabelAction" text="Forgot Password?">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Hyperlink>
+      <Label fx:id="noticeLabel" layoutX="567.0" layoutY="468.0" text="Tài khoản không tồn tại" textFill="RED">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
    </children>
-   <padding>
-      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-   </padding>
-</GridPane>
+</AnchorPane>
