edit forgot pwd thieu anh

--- a/src/Views/ForgotPasswordScreen/ForgotPassword_Screen.fxml
+++ b/src/Views/ForgotPasswordScreen/ForgotPassword_Screen.fxml
@@ -30,7 +30,7 @@
       </Label>
       <ImageView fitHeight="145.0" fitWidth="143.0" layoutX="268.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="268.0" AnchorPane.rightAnchor="268.0">
          <image>
-            <Image url="@user.png" />
+            <Image url="@google.png" />
          </image>
       </ImageView>
       <Label layoutX="202.0" layoutY="177.0" text="Trouble Logging In?" AnchorPane.leftAnchor="201.0" AnchorPane.rightAnchor="201.0">
