--- a/src/Views/AccountSettingScreen/AccountSetting_Screen.fxml
+++ b/src/Views/AccountSettingScreen/AccountSetting_Screen.fxml
@@ -20,10 +20,10 @@
             <Font name="Tahoma" size="16.0" />
          </font>
       </Button>
-      <TextField fx:id="oldpwdTf" layoutX="241.0" layoutY="170.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
-      <TextField fx:id="confirmpwdTf" layoutX="241.0" layoutY="275.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
-      <TextField fx:id="newpwdTf" layoutX="241.0" layoutY="223.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
-      <Label fx:id="noticeLb" layoutX="161.0" layoutY="346.0" prefHeight="35.0" prefWidth="178.0" text="Thêm yêu cầu thành công!" textFill="#f5f5f5">
+      <TextField fx:id="old_pwdTF" layoutX="241.0" layoutY="170.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
+      <TextField fx:id="confirm_pwdTF" layoutX="241.0" layoutY="275.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
+      <TextField fx:id="new_pwdTF" layoutX="241.0" layoutY="223.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
+      <Label fx:id="noticeLabel" layoutX="161.0" layoutY="346.0" prefHeight="35.0" prefWidth="178.0" text="Thêm yêu cầu thành công!" textFill="#f5f5f5">
          <font>
             <Font size="14.0" />
          </font>
