--- a/src/Views/CartScreen/Cart_Screen.fxml
+++ b/src/Views/CartScreen/Cart_Screen.fxml
@@ -17,18 +17,18 @@
             <Image url="@2x/background.png" />
          </image>
       </ImageView>
-      <Button fx:id="ycnhapBtn" layoutX="673.0" layoutY="661.0" mnemonicParsing="false" onAction="#ycnhapBtnAction" prefHeight="41.0" prefWidth="130.0" style="-fx-background-color: #fff;" text="Yêu cầu nhập" textFill="#454eff">
+      <Button fx:id="import_reqBtn" layoutX="673.0" layoutY="661.0" mnemonicParsing="false" onAction="#import_reqBtnAction" prefHeight="41.0" prefWidth="130.0" style="-fx-background-color: #fff;" text="Yêu cầu nhập" textFill="#454eff">
          <font>
             <Font name="Tahoma" size="14.0" />
          </font>
       </Button>
-      <TableView fx:id="chitietycTV" layoutX="46.0" layoutY="96.0" prefHeight="528.0" prefWidth="735.0" stylesheets="@tableview.css">
+      <TableView fx:id="cartTable" layoutX="46.0" layoutY="96.0" prefHeight="528.0" prefWidth="735.0" stylesheets="@tableview.css">
         <columns>
-          <TableColumn fx:id="idspCol" prefWidth="49.0" text="ID" />
-          <TableColumn fx:id="tenspCol" minWidth="0.0" prefWidth="335.0" text="Tên sản phẩm" />
-            <TableColumn fx:id="loaispCol" minWidth="0.0" prefWidth="154.0" text="Loại sản phẩm" />
-            <TableColumn fx:id="giaspCol" minWidth="0.0" prefWidth="103.0" text="Giá" />
-            <TableColumn fx:id="numspCol" minWidth="0.0" prefWidth="93.0" text="Số lượng" />
+          <TableColumn fx:id="id_prodCol" prefWidth="49.0" text="ID" />
+          <TableColumn fx:id="name_prodCol" minWidth="0.0" prefWidth="335.0" text="Tên sản phẩm" />
+            <TableColumn fx:id="type_prodCol" minWidth="0.0" prefWidth="154.0" text="Loại sản phẩm" />
+            <TableColumn fx:id="priceCol" minWidth="0.0" prefWidth="103.0" text="Giá" />
+            <TableColumn fx:id="num_cartCol" minWidth="0.0" prefWidth="93.0" text="Số lượng" />
         </columns>
       </TableView>
       <Button fx:id="backBtn" layoutX="1156.0" layoutY="648.0" mnemonicParsing="false" onAction="#backBtnAction" prefHeight="41.0" prefWidth="112.0" style="-fx-background-color: #454EFF; -fx-border-radius: 10px;" text="   Trở về" textFill="WHITE">
@@ -41,15 +41,15 @@
             <Image url="@2x/2x/back@2x.png" />
          </image>
       </ImageView>
-      <Button fx:id="ycxuatBtn" layoutX="527.0" layoutY="661.0" mnemonicParsing="false" onAction="#ycxuatBtnAction" prefHeight="41.0" prefWidth="130.0" style="-fx-background-color: #fff;" text="Yêu cầu xuất" textFill="#454eff">
+      <Button fx:id="export_reqBtn" layoutX="527.0" layoutY="661.0" mnemonicParsing="false" onAction="#exportRequestBtnAction" prefHeight="41.0" prefWidth="130.0" style="-fx-background-color: #fff;" text="Yêu cầu xuất" textFill="#454eff">
          <font>
             <Font name="Tahoma" size="14.0" />
          </font>
       </Button>
-      <TextField fx:id="tenkhTF" layoutX="1045.0" layoutY="143.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
-      <TextField fx:id="sdtkhTF" layoutX="1045.0" layoutY="200.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
-      <TextField fx:id="diachikhTF" layoutX="1045.0" layoutY="254.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
-      <Button layoutX="31.0" layoutY="661.0" mnemonicParsing="false" onAction="#xoaBtnAction" prefHeight="41.0" prefWidth="130.0" style="-fx-background-color: #fff;" text="Bỏ sản phẩm" textFill="#ff4747" fx:id="xoaspBtn">
+      <TextField fx:id="name_cusTF" layoutX="1045.0" layoutY="143.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
+      <TextField fx:id="phone_cusTF" layoutX="1045.0" layoutY="200.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
+      <TextField fx:id="address_cusTF" layoutX="1045.0" layoutY="254.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
+      <Button fx:id="del_prodBtn" layoutX="31.0" layoutY="661.0" mnemonicParsing="false" onAction="#delProdBtnAction" prefHeight="41.0" prefWidth="130.0" style="-fx-background-color: #fff;" text="Bỏ sản phẩm" textFill="#ff4747">
          <font>
             <Font name="Tahoma" size="14.0" />
          </font>
