--- a/src/Views/ForgotPasswordScreen/ForgotPassword_Screen.fxml
+++ b/src/Views/ForgotPasswordScreen/ForgotPassword_Screen.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ForgotPassword_Controller">
    <children>
-      <Button fx:id="backButton" layoutX="45.0" layoutY="52.0" mnemonicParsing="false" onAction="#backButtonAction" prefHeight="54.0" prefWidth="55.0" style="-fx-background-color: FFFFFF;">
+      <Button fx:id="backBtn" layoutX="45.0" layoutY="52.0" mnemonicParsing="false" onAction="#backBtnAction" prefHeight="54.0" prefWidth="55.0" style="-fx-background-color: FFFFFF;">
          <graphic>
             <ImageView fitHeight="44.0" fitWidth="49.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -19,7 +19,7 @@
             </ImageView>
          </graphic></Button>
       <TextField fx:id="emailTF" layoutX="178.0" layoutY="406.0" prefHeight="46.0" prefWidth="931.0" promptText="Email" AnchorPane.leftAnchor="178.0" AnchorPane.rightAnchor="171.0" />
-      <Button fx:id="sendpasswordButton" layoutX="557.0" layoutY="499.0" mnemonicParsing="false" onAction="#sendpasswordButtonAction" prefHeight="65.0" prefWidth="214.0" style="-fx-background-color: #D6EFFA;" text="Send Password to Email" textFill="WHITE" AnchorPane.leftAnchor="557.0" AnchorPane.rightAnchor="509.0">
+      <Button fx:id="sendpwdBtn" layoutX="557.0" layoutY="499.0" mnemonicParsing="false" onAction="#sendpwdBtnAction" prefHeight="65.0" prefWidth="214.0" style="-fx-background-color: #D6EFFA;" text="Send Password to Email" textFill="WHITE" AnchorPane.leftAnchor="557.0" AnchorPane.rightAnchor="509.0">
          <font>
             <Font name="Tahoma Bold" size="16.0" />
          </font></Button>
