--- a/src/Views/ProductManagementScreen/ProductManagement_Screen.fxml
+++ b/src/Views/ProductManagementScreen/ProductManagement_Screen.fxml
@@ -23,21 +23,21 @@
             <Font name="Tahoma" size="14.0" />
          </font>
       </Button>
-      <TableView fx:id="tablesanpham" layoutX="49.0" layoutY="103.0" onMouseClicked="#tablesanphamAction" prefHeight="532.0" prefWidth="735.0" stylesheets="@tableview.css">
+      <TableView fx:id="productionTable" layoutX="49.0" layoutY="103.0" onMouseClicked="#tablesanphamAction" prefHeight="532.0" prefWidth="735.0" stylesheets="@tableview.css">
         <columns>
-          <TableColumn fx:id="idspCol" prefWidth="144.0" text="ID" />
-          <TableColumn fx:id="tenspCol" minWidth="0.0" prefWidth="265.0" text="Tên sản phẩm" />
-            <TableColumn fx:id="loaispCol" minWidth="0.0" prefWidth="129.0" text="Loại sản phẩm" />
-            <TableColumn fx:id="giaspCol" minWidth="0.0" prefWidth="112.0" text="Giá" />
+          <TableColumn fx:id="id_prodCol" prefWidth="144.0" text="ID" />
+          <TableColumn fx:id="name_prodCol" minWidth="0.0" prefWidth="265.0" text="Tên sản phẩm" />
+            <TableColumn fx:id="type_prodCol" minWidth="0.0" prefWidth="129.0" text="Loại sản phẩm" />
+            <TableColumn fx:id="priceCol" minWidth="0.0" prefWidth="112.0" text="Giá" />
             <TableColumn fx:id="numspCol" minWidth="0.0" prefWidth="84.0" text="Số lượng" />
         </columns>
       </TableView>
-      <TextField fx:id="addnumspTF" layoutX="859.0" layoutY="480.0" prefHeight="47.0" prefWidth="265.0" promptText="Thêm số lượng" style="-fx-background-color: #fff; -fx-border-color: #f3f3f3; -fx-border-radius: 5px;">
+      <TextField fx:id="num_prod_to_cartTF" layoutX="859.0" layoutY="480.0" prefHeight="47.0" prefWidth="265.0" promptText="Thêm số lượng" style="-fx-background-color: #fff; -fx-border-color: #f3f3f3; -fx-border-radius: 5px;">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <Button fx:id="addBtn" layoutX="1136.0" layoutY="482.0" mnemonicParsing="false" onAction="#addBtnAction" prefHeight="41.0" prefWidth="121.0" style="-fx-background-color: #454EFF; -fx-border-radius: 10px;" text="Thêm vào giỏ" textFill="WHITE">
+      <Button fx:id="add_to_cartBtn" layoutX="1136.0" layoutY="482.0" mnemonicParsing="false" onAction="#addToCartBtnAction" prefHeight="41.0" prefWidth="121.0" style="-fx-background-color: #454EFF; -fx-border-radius: 10px;" text="Thêm vào giỏ" textFill="WHITE">
          <font>
             <Font name="Tahoma" size="16.0" />
          </font>
@@ -57,27 +57,27 @@
             <Image url="@2x/2x/cart@2x.png" />
          </image>
       </ImageView>
-      <Label fx:id="IDlabel" layoutX="892.0" layoutY="194.0" prefHeight="26.0" prefWidth="229.0" text="LT001">
+      <Label fx:id="id_prod_label" layoutX="892.0" layoutY="194.0" prefHeight="26.0" prefWidth="229.0" text="LT001">
          <font>
             <Font name="Tahoma" size="24.0" />
          </font></Label>
-      <Label fx:id="namesp_label" layoutX="1024.0" layoutY="251.0" prefHeight="28.0" prefWidth="203.0" text="Macbook Pro 2021">
+      <Label fx:id="name_prod_label" layoutX="1024.0" layoutY="251.0" prefHeight="28.0" prefWidth="203.0" text="Macbook Pro 2021">
          <font>
             <Font name="Tahoma" size="24.0" />
          </font></Label>
-      <Label fx:id="loaisp_label" layoutX="918.0" layoutY="307.0" prefHeight="18.0" prefWidth="187.0" text="Laptop">
+      <Label fx:id="type_prod_label" layoutX="918.0" layoutY="307.0" prefHeight="18.0" prefWidth="187.0" text="Laptop">
          <font>
             <Font name="Tahoma" size="24.0" />
          </font></Label>
-      <Label fx:id="giasp_label" layoutX="908.0" layoutY="368.0" prefHeight="25.0" prefWidth="203.0" text="40.000.000 VND">
+      <Label fx:id="price_label" layoutX="908.0" layoutY="368.0" prefHeight="25.0" prefWidth="203.0" text="40.000.000 VND">
          <font>
             <Font name="Tahoma" size="24.0" />
          </font></Label>
-      <Label fx:id="numsp_label" layoutX="1022.0" layoutY="421.0" prefHeight="35.0" prefWidth="166.0" text="2">
+      <Label fx:id="num_exist_label" layoutX="1022.0" layoutY="421.0" prefHeight="35.0" prefWidth="166.0" text="2">
          <font>
             <Font name="Tahoma" size="24.0" />
          </font></Label>
-      <Label fx:id="message_label" layoutX="859.0" layoutY="537.0" prefHeight="18.0" prefWidth="399.0" text="Thêm vào giỏ hàng thành công" textFill="RED">
+      <Label fx:id="addToCart_messageLabel" layoutX="859.0" layoutY="537.0" prefHeight="18.0" prefWidth="399.0" text="Thêm vào giỏ hàng thành công" textFill="RED">
          <font>
             <Font name="Segoe UI" size="12.0" />
          </font></Label>
@@ -86,7 +86,7 @@
             <Font name="Tahoma" size="16.0" />
          </font>
       </Button>
-      <Button layoutX="417.0" layoutY="661.0" mnemonicParsing="false" onAction="#xoaBtnAction" prefHeight="41.0" prefWidth="187.0" style="-fx-background-color: #fff; -fx-border-radius: 10px;" text="Xóa sản phẩm" textFill="#ff4747" fx:id="xoaBtn">
+      <Button fx:id="delete_prodBtn" layoutX="417.0" layoutY="661.0" mnemonicParsing="false" onAction="#deleteBtnAction" prefHeight="41.0" prefWidth="187.0" style="-fx-background-color: #fff; -fx-border-radius: 10px;" text="Xóa sản phẩm" textFill="#ff4747">
          <font>
             <Font name="Tahoma" size="16.0" />
          </font>
