--- a/src/Views/CartScreen/Cart_Screen.fxml
+++ b/src/Views/CartScreen/Cart_Screen.fxml
@@ -54,11 +54,7 @@
             <Font name="Tahoma" size="14.0" />
          </font>
       </Button>
-      <Label fx:id="request_label" layoutX="171.0" layoutY="664.0" prefHeight="35.0" prefWidth="309.0" text="Đây là thông báo" textFill="WHITE">
-         <font>
-            <Font size="15.0" />
-         </font></Label>
-      <Label fx:id="notice_infocus_label" layoutX="854.0" layoutY="311.0" prefHeight="35.0" prefWidth="318.0" text="Đây là thông báo" textFill="#f40000">
+      <Label fx:id="notice_infocus_label" layoutX="854.0" layoutY="311.0" prefHeight="35.0" prefWidth="247.0" text="Hãy điền đầy đủ thông tin khách hàng" textFill="#f40000">
          <font>
             <Font size="14.0" />
          </font></Label>
