--- a/src/Views/ChangePasswordScreen/ChangePassword_Screen.fxml
+++ b/src/Views/ChangePasswordScreen/ChangePassword_Screen.fxml
@@ -20,7 +20,7 @@
             <Font name="Tahoma" size="16.0" />
          </font>
       </Button>
-      <Label fx:id="noticeLabel" layoutX="161.0" layoutY="346.0" prefHeight="35.0" prefWidth="178.0" text="Thêm yêu cầu thành công!" textFill="#f5f5f5">
+      <Label fx:id="noticeLabel" alignment="CENTER" layoutX="139.0" layoutY="345.0" prefHeight="35.0" prefWidth="222.0" text="Confirm password sai, mời nhập lại" textFill="#f5f5f5">
          <font>
             <Font size="14.0" />
          </font>
