--- a/src/Views/ForgotPasswordScreen/ForgotPassword_Screen.fxml
+++ b/src/Views/ForgotPasswordScreen/ForgotPassword_Screen.fxml
@@ -20,7 +20,7 @@
             </ImageView>
          </graphic></Button>
       <TextField fx:id="emailTF" layoutX="399.0" layoutY="347.0" prefHeight="46.0" prefWidth="529.0" promptText="Email" AnchorPane.leftAnchor="399.0" AnchorPane.rightAnchor="352.0" />
-      <Button fx:id="sendpwdBtn" layoutX="592.0" layoutY="573.0" mnemonicParsing="false" onAction="#sendpwdBtnAction" prefHeight="46.0" prefWidth="143.0" style="-fx-background-color: #90d9fb;" text="Send Code" textFill="WHITE" AnchorPane.leftAnchor="592.0" AnchorPane.rightAnchor="545.0">
+      <Button fx:id="sendpwdBtn" layoutX="579.0" layoutY="588.0" mnemonicParsing="false" onAction="#sendpwdBtnAction" prefHeight="46.0" prefWidth="169.0" style="-fx-background-color: #90d9fb;" text="Send code" textFill="WHITE" AnchorPane.leftAnchor="579.0" AnchorPane.rightAnchor="532.0">
          <font>
             <Font name="Tahoma Bold" size="16.0" />
          </font></Button>
@@ -34,7 +34,7 @@
             <Font name="Tahoma Bold" size="27.0" />
          </font>
       </Label>
-      <TextField fx:id="codeTF" layoutX="399.0" layoutY="414.0" prefHeight="46.0" prefWidth="529.0" promptText="Received code" />
-      <PasswordField fx:id="newPwdPF" layoutX="399.0" layoutY="483.0" prefHeight="46.0" prefWidth="529.0" promptText="New password" />
+      <TextField fx:id="codeTF" layoutX="399.0" layoutY="422.0" prefHeight="46.0" prefWidth="529.0" promptText="Received code" />
+      <PasswordField fx:id="newPwdPF" layoutX="398.0" layoutY="496.0" prefHeight="46.0" prefWidth="530.0" promptText="New password" />
    </children>
 </AnchorPane>
