--- a/src/Views/StaffManagementScreen/AddNewStaffScreen/AddNewStaff_Screen.fxml
+++ b/src/Views/StaffManagementScreen/AddNewStaffScreen/AddNewStaff_Screen.fxml
@@ -31,7 +31,7 @@
       <TextField fx:id="sdtkhTF1111" layoutX="225.0" layoutY="443.0" prefHeight="41.0" prefWidth="223.0" style="-fx-background-color: transparent; -fx-border-radius: 15px; -fx-border-color: #d6d6d6;" />
       <DatePicker fx:id="birthDp" layoutX="231.0" layoutY="446.0" prefHeight="34.0" prefWidth="212.0" style="-fx-background-color: transparent;" stylesheets="@datepicker.css" />
 
-      <Label fx:id="noticeLabel" layoutX="161.0" layoutY="580.0" prefHeight="35.0" prefWidth="178.0" text="Thêm nhân viên thành công!" textFill="#f5f5f5">
+      <Label fx:id="noticeLabel" alignment="CENTER" layoutX="138.0" layoutY="580.0" prefHeight="35.0" prefWidth="223.0" text="Confirm Password sai, mời nhập lại" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
